--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 598,
+   "execution_count": 35,
    "id": "7908eced",
    "metadata": {},
    "outputs": [
@@ -38,7 +38,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 530,
+   "execution_count": 36,
    "id": "e35108a6",
    "metadata": {},
    "outputs": [],
@@ -48,18 +48,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 531,
+   "execution_count": 37,
    "id": "3927eb5e",
    "metadata": {},
    "outputs": [],
    "source": [
     "list_files = norm.import_list_csv(PATH_FILES)\n",
-    "df_names = list(list_files.keys())"
+    "df_names = ['df_contract', 'df_internet', 'df_personal', 'df_phone']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 532,
+   "execution_count": 38,
    "id": "02e660ce",
    "metadata": {},
    "outputs": [
@@ -77,39 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 533,
-   "id": "d766281d",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "<class 'pandas.core.frame.DataFrame'>\n",
-      "RangeIndex: 7043 entries, 0 to 7042\n",
-      "Data columns (total 8 columns):\n",
-      " #   Column            Non-Null Count  Dtype  \n",
-      "---  ------            --------------  -----  \n",
-      " 0   customerID        7043 non-null   object \n",
-      " 1   BeginDate         7043 non-null   object \n",
-      " 2   EndDate           7043 non-null   object \n",
-      " 3   Type              7043 non-null   object \n",
-      " 4   PaperlessBilling  7043 non-null   object \n",
-      " 5   PaymentMethod     7043 non-null   object \n",
-      " 6   MonthlyCharges    7043 non-null   float64\n",
-      " 7   TotalCharges      7043 non-null   object \n",
-      "dtypes: float64(1), object(7)\n",
-      "memory usage: 440.3+ KB\n"
-     ]
-    }
-   ],
-   "source": [
-    "list_files[df_names[0]].info()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 534,
+   "execution_count": 39,
    "id": "ee6ac75c",
    "metadata": {},
    "outputs": [
@@ -220,7 +188,7 @@
        "4              Yes           Electronic check           70.70       151.65  "
       ]
      },
-     "execution_count": 534,
+     "execution_count": 39,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -231,7 +199,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 535,
+   "execution_count": 40,
    "id": "4dc3868c",
    "metadata": {},
    "outputs": [],
@@ -244,7 +212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 536,
+   "execution_count": 41,
    "id": "fd7c44d8",
    "metadata": {},
    "outputs": [
@@ -276,7 +244,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 537,
+   "execution_count": 42,
    "id": "87eb19de",
    "metadata": {},
    "outputs": [
@@ -387,7 +355,7 @@
        "4          No          No              No  "
       ]
      },
-     "execution_count": 537,
+     "execution_count": 42,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -398,7 +366,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 538,
+   "execution_count": 43,
    "id": "abac42ba",
    "metadata": {},
    "outputs": [],
@@ -412,7 +380,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 539,
+   "execution_count": 44,
    "id": "9955c747",
    "metadata": {},
    "outputs": [
@@ -441,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 540,
+   "execution_count": 45,
    "id": "e27bea67",
    "metadata": {},
    "outputs": [
@@ -475,104 +443,104 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>5098</th>\n",
-       "      <td>8258-GSTJK</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>1</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2748</th>\n",
-       "      <td>2495-INZWQ</td>\n",
-       "      <td>Male</td>\n",
+       "      <th>1404</th>\n",
+       "      <td>1970-KKFWL</td>\n",
+       "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>6759</th>\n",
-       "      <td>1591-MQJTP</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>1</td>\n",
-       "      <td>Yes</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1976</th>\n",
-       "      <td>9497-QCMMS</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>1</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5485</th>\n",
-       "      <td>7794-JASDG</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4186</th>\n",
-       "      <td>7572-KPVKK</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>0</td>\n",
-       "      <td>No</td>\n",
-       "      <td>Yes</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5418</th>\n",
-       "      <td>8490-BXHEO</td>\n",
-       "      <td>Male</td>\n",
-       "      <td>1</td>\n",
-       "      <td>No</td>\n",
-       "      <td>No</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>6455</th>\n",
-       "      <td>2478-EEWWM</td>\n",
+       "      <th>3052</th>\n",
+       "      <td>5151-HQRDG</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>Yes</td>\n",
        "      <td>No</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4600</th>\n",
-       "      <td>1741-WTPON</td>\n",
+       "      <th>93</th>\n",
+       "      <td>6067-NGCEU</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1538</th>\n",
+       "      <td>6326-MTTXK</td>\n",
        "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>7039</th>\n",
+       "      <td>2234-XADUH</td>\n",
+       "      <td>Female</td>\n",
        "      <td>0</td>\n",
        "      <td>Yes</td>\n",
        "      <td>Yes</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2896</th>\n",
-       "      <td>9522-ZSINC</td>\n",
+       "      <th>1545</th>\n",
+       "      <td>5193-QLVZB</td>\n",
        "      <td>Male</td>\n",
        "      <td>0</td>\n",
        "      <td>No</td>\n",
        "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4148</th>\n",
+       "      <td>9142-XMYJH</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3580</th>\n",
+       "      <td>0260-ZDLGK</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>Yes</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5355</th>\n",
+       "      <td>4724-WXVWF</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>No</td>\n",
+       "      <td>No</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5092</th>\n",
+       "      <td>5774-XZTQC</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>Yes</td>\n",
+       "      <td>Yes</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "      customerID gender  SeniorCitizen Partner Dependents\n",
-       "5098  8258-GSTJK   Male              1      No         No\n",
-       "2748  2495-INZWQ   Male              0      No         No\n",
-       "6759  1591-MQJTP   Male              1     Yes         No\n",
-       "1976  9497-QCMMS   Male              1      No         No\n",
-       "5485  7794-JASDG   Male              0      No         No\n",
-       "4186  7572-KPVKK   Male              0      No        Yes\n",
-       "5418  8490-BXHEO   Male              1      No         No\n",
-       "6455  2478-EEWWM   Male              0     Yes         No\n",
-       "4600  1741-WTPON   Male              0     Yes        Yes\n",
-       "2896  9522-ZSINC   Male              0      No         No"
+       "      customerID  gender  SeniorCitizen Partner Dependents\n",
+       "1404  1970-KKFWL  Female              0      No         No\n",
+       "3052  5151-HQRDG    Male              0     Yes         No\n",
+       "93    6067-NGCEU  Female              0      No         No\n",
+       "1538  6326-MTTXK    Male              0      No         No\n",
+       "7039  2234-XADUH  Female              0     Yes        Yes\n",
+       "1545  5193-QLVZB    Male              0      No         No\n",
+       "4148  9142-XMYJH  Female              0      No         No\n",
+       "3580  0260-ZDLGK  Female              0      No        Yes\n",
+       "5355  4724-WXVWF    Male              0      No         No\n",
+       "5092  5774-XZTQC  Female              0     Yes        Yes"
       ]
      },
-     "execution_count": 540,
+     "execution_count": 45,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -583,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 541,
+   "execution_count": 46,
    "id": "c83387f9",
    "metadata": {},
    "outputs": [],
@@ -595,7 +563,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 542,
+   "execution_count": 47,
    "id": "e88038cd",
    "metadata": {},
    "outputs": [
@@ -621,7 +589,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 543,
+   "execution_count": 48,
    "id": "70ed0475",
    "metadata": {},
    "outputs": [
@@ -719,7 +687,7 @@
        "9  8091-TTVAX           Yes"
       ]
      },
-     "execution_count": 543,
+     "execution_count": 48,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -730,7 +698,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 544,
+   "execution_count": 49,
    "id": "4ad2072c",
    "metadata": {},
    "outputs": [],
@@ -740,7 +708,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 545,
+   "execution_count": 50,
    "id": "22e6a5c5",
    "metadata": {},
    "outputs": [],
@@ -752,17 +720,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 546,
+   "execution_count": 51,
    "id": "e8ea35af",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_data = norm.standarize_titles(norm.merge_list_dataframe(main_df,merge_files,'customerID'))\n"
+    "df_data = norm.standarize_titles(norm.merge_list_dataframe(main_df,merge_files,'customerID'))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 556,
+   "execution_count": 52,
    "id": "f1a4050a",
    "metadata": {},
    "outputs": [],
@@ -775,7 +743,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 53,
    "id": "ed9c0cac",
    "metadata": {},
    "outputs": [
@@ -808,14 +776,14 @@
        "      <th>paymentmethod</th>\n",
        "      <th>monthlycharges</th>\n",
        "      <th>totalcharges</th>\n",
-       "      <th>internetservice</th>\n",
-       "      <th>onlinesecurity</th>\n",
-       "      <th>...</th>\n",
-       "      <th>streamingmovies</th>\n",
        "      <th>gender</th>\n",
        "      <th>seniorcitizen</th>\n",
-       "      <th>partner</th>\n",
-       "      <th>dependents</th>\n",
+       "      <th>...</th>\n",
+       "      <th>onlinebackup</th>\n",
+       "      <th>deviceprotection</th>\n",
+       "      <th>techsupport</th>\n",
+       "      <th>streamingtv</th>\n",
+       "      <th>streamingmovies</th>\n",
        "      <th>multiplelines</th>\n",
        "      <th>timeservicedays</th>\n",
        "      <th>objective</th>\n",
@@ -834,14 +802,14 @@
        "      <td>Electronic check</td>\n",
        "      <td>29.85</td>\n",
        "      <td>29.85</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
@@ -858,14 +826,14 @@
        "      <td>Mailed check</td>\n",
        "      <td>56.95</td>\n",
        "      <td>1889.50</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>False</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
@@ -882,14 +850,14 @@
        "      <td>Mailed check</td>\n",
        "      <td>53.85</td>\n",
        "      <td>108.15</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>False</td>\n",
        "      <td>61.0</td>\n",
        "      <td>0</td>\n",
@@ -906,14 +874,14 @@
        "      <td>Bank transfer (automatic)</td>\n",
        "      <td>42.30</td>\n",
        "      <td>1840.75</td>\n",
-       "      <td>DSL</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>...</td>\n",
-       "      <td>0.0</td>\n",
        "      <td>1</td>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>...</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
        "      <td>1</td>\n",
@@ -930,14 +898,14 @@
        "      <td>Electronic check</td>\n",
        "      <td>70.70</td>\n",
        "      <td>151.65</td>\n",
-       "      <td>Fiber optic</td>\n",
-       "      <td>0.0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
        "      <td>...</td>\n",
        "      <td>0.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.0</td>\n",
        "      <td>False</td>\n",
        "      <td>61.0</td>\n",
        "      <td>0</td>\n",
@@ -957,31 +925,38 @@
        "3  7795-CFOCW 2016-05-01        NaT        One year                 0   \n",
        "4  9237-HQITU 2019-09-01 2019-11-01  Month-to-month                 1   \n",
        "\n",
-       "               paymentmethod  monthlycharges  totalcharges internetservice  \\\n",
-       "0           Electronic check           29.85         29.85             DSL   \n",
-       "1               Mailed check           56.95       1889.50             DSL   \n",
-       "2               Mailed check           53.85        108.15             DSL   \n",
-       "3  Bank transfer (automatic)           42.30       1840.75             DSL   \n",
-       "4           Electronic check           70.70        151.65     Fiber optic   \n",
+       "               paymentmethod  monthlycharges  totalcharges  gender  \\\n",
+       "0           Electronic check           29.85         29.85       0   \n",
+       "1               Mailed check           56.95       1889.50       1   \n",
+       "2               Mailed check           53.85        108.15       1   \n",
+       "3  Bank transfer (automatic)           42.30       1840.75       1   \n",
+       "4           Electronic check           70.70        151.65       0   \n",
        "\n",
-       "   onlinesecurity  ...  streamingmovies  gender  seniorcitizen  partner  \\\n",
-       "0             0.0  ...              0.0       0              0        1   \n",
-       "1             1.0  ...              0.0       1              0        0   \n",
-       "2             1.0  ...              0.0       1              0        0   \n",
-       "3             1.0  ...              0.0       1              0        0   \n",
-       "4             0.0  ...              0.0       0              0        0   \n",
+       "   seniorcitizen  ...  onlinebackup  deviceprotection techsupport  \\\n",
+       "0              0  ...           1.0               0.0         0.0   \n",
+       "1              0  ...           0.0               1.0         0.0   \n",
+       "2              0  ...           1.0               0.0         0.0   \n",
+       "3              0  ...           0.0               1.0         1.0   \n",
+       "4              0  ...           0.0               0.0         0.0   \n",
        "\n",
-       "   dependents  multiplelines  timeservicedays  objective  beginmonth beginyear  \n",
-       "0           0            NaN              NaN          1           1      2020  \n",
-       "1           0          False              NaN          1           4      2017  \n",
-       "2           0          False             61.0          0          10      2019  \n",
-       "3           0            NaN              NaN          1           5      2016  \n",
-       "4           0          False             61.0          0           9      2019  \n",
+       "   streamingtv  streamingmovies  multiplelines  timeservicedays  objective  \\\n",
+       "0          0.0              0.0            NaN              NaN          1   \n",
+       "1          0.0              0.0          False              NaN          1   \n",
+       "2          0.0              0.0          False             61.0          0   \n",
+       "3          0.0              0.0            NaN              NaN          1   \n",
+       "4          0.0              0.0          False             61.0          0   \n",
+       "\n",
+       "   beginmonth beginyear  \n",
+       "0           1      2020  \n",
+       "1           4      2017  \n",
+       "2          10      2019  \n",
+       "3           5      2016  \n",
+       "4           9      2019  \n",
        "\n",
        "[5 rows x 24 columns]"
       ]
      },
-     "execution_count": 557,
+     "execution_count": 53,
      "metadata": {},
      "output_type": "execute_result"
     }
