Standar procedure to read files from cod
PATH_FILES = os.path.join(os.getcwd(), "files")

--- a/notebook.ipynb
+++ b/notebook.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 54,
    "id": "7908eced",
    "metadata": {},
    "outputs": [
@@ -19,7 +19,7 @@
     "%load_ext autoreload\n",
     "%autoreload 2\n",
     "from controller import normalization as norm\n",
-    "\n",
+    "import os\n",
     "import matplotlib\n",
     "import matplotlib.pyplot as plt\n",
     "import matplotlib.dates as mdates\n",
@@ -38,12 +38,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 63,
    "id": "e35108a6",
    "metadata": {},
    "outputs": [],
    "source": [
-    "PATH_FILES = 'C:/Users/Develop/Documents/Python/proyects/project_18/files/'"
+    "PATH_FILES = os.path.join(os.getcwd(), \"files\")"
    ]
   },
   {
